--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Lausanne, Switzerland<br />
 </div>
 <h1 id="research-interest">Research Interest</h1>
 <blockquote>
-<p>Operating Systems, Distributed Systems, Computer Architecture</p>
+<p>Operating Systems, Concurrency, Distributed Systems, Computer Architecture</p>
 </blockquote>
 <h1 id="pub">Publications</h1>
 <ol>
@@ -325,7 +325,7 @@ Lausanne, Switzerland<br />
     </span>
 </li>
 </ol>
-<p><a href="" class="footer">Updated: June 20, 2020</a></p>
+<p><a href="" class="footer">Updated: July 09, 2020</a></p>
 </div>
 </body>
 </html>
