--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Sanidhya Kashyap
 <blockquote>
 <p><img src="files/img/sanidhya.jpg" alt="[Sanidhya]" id="photo" /> Assistant Professor<br />
 School of Computer and Communication Sciences (IC)<br />
-École Polytechnique Fédérale de Lausanne (EFPL)<br />
+École Polytechnique Fédérale de Lausanne (EPFL)<br />
 Lausanne, Switzerland<br />
 </p>
 <ul>
@@ -324,7 +324,7 @@ Lausanne, Switzerland<br />
     </span>
 </li>
 </ol>
-<p><a href="" class="footer">Updated: July 09, 2020</a></p>
+<p><a href="" class="footer">Updated: July 10, 2020</a></p>
 </div>
 </body>
 </html>
