--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Lausanne, Switzerland<br />
 </p>
 <ul>
 <li><a href="cv.pdf">CV</a></li>
-<li>sanidhya@gatech.edu</li>
+<li>sanidhya.kashyap@epfl.ch</li>
 </ul>
 </blockquote>
 <h1 id="research-interest">Research Interest</h1>
@@ -317,7 +317,7 @@ Lausanne, Switzerland<br />
     </span>
 </li>
 </ol>
-<p><a href="" class="footer">Updated: July 20, 2020</a></p>
+<p><a href="" class="footer">Updated: August 10, 2020</a></p>
 </div>
 </body>
 </html>
