--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
   <![endif]-->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113129009-1"></script>
+  <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+  
+      gtag('config', 'UA-113129009-1');
+  </script>
 </head>
 <body>
 <header id="title-block-header">
@@ -317,7 +326,7 @@ Lausanne, Switzerland<br />
     </span>
 </li>
 </ol>
-<p><a href="" class="footer">Updated: August 10, 2020</a></p>
+<p><a href="" class="footer">Updated: September 24, 2020</a></p>
 </div>
 </body>
 </html>
