--- a/index.html
+++ b/index.html
@@ -60,6 +60,16 @@ Lausanne, Switzerland<br />
 <h1 id="pub">Publications</h1>
 <ol>
 <li class="pub">
+    <b>Preventing Use-After-Free Attacks with Fast Forward Allocation.</b><br/>
+    Brian Wickman, Hong Hu, Insu Yun, Daehee Jang, JungWon Lim, Sanidhya Kashyap, and Taesoo Kim.<br/>
+    In <i>Proceedings of the 30th USENIX Security Symposium (Security 2021)</i>,<br/>
+    <span class='meta'>
+    
+    
+    </span>
+</li>
+
+<li class="pub">
     <b>Finding Bugs in File Systems with an Extensible Fuzzing Framework.</b>
     [ <a class="code" href="https://github.com/sslab-gatech/hydra"></a>&nbsp;]<br/>
     Seulbae Kim, Meng Xu, Sanidhya Kashyap, Jungyeon Yoon, Wen Xu, and Taesoo Kim.<br/>
@@ -333,7 +343,7 @@ Lausanne, Switzerland<br />
     </span>
 </li>
 </ol>
-<p><a href="" class="footer">Updated: September 24, 2020</a></p>
+<p><a href="" class="footer">Updated: October 03, 2020</a></p>
 </div>
 </body>
 </html>
