--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Lausanne, Switzerland<br />
 <h1 id="for-perspective-folks">For perspective folks</h1>
 <div class="notify">
 <blockquote>
-<p><strong>I am looking for students and post-doc. If you can hack, we should talk. Please fill the <a href="https://forms.gle/PMGX6uXFq3d2C48j8">google form</a>. </strong><br />
+<p><strong>I am looking for students and a post-doc. If you can hack, we should talk. Please drop me an email if you interested. </strong><br />
 </p>
 </blockquote>
 </div>
@@ -343,7 +343,7 @@ Lausanne, Switzerland<br />
     </span>
 </li>
 </ol>
-<p><a href="" class="footer">Updated: October 03, 2020</a></p>
+<p><a href="" class="footer">Updated: October 31, 2020</a></p>
 </div>
 </body>
 </html>
