--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Lausanne, Switzerland<br />
 <h1 id="for-perspective-folks">For perspective folks</h1>
 <div class="notify">
 <blockquote>
-<p><strong>I am looking for students and a post-doc. Please drop me an email if you interested. </strong><br />
+<p><strong>I have positions for multiple students and a postdoc. Please drop me an email if you interested. </strong><br />
 </p>
 </blockquote>
 </div>
@@ -343,7 +343,7 @@ Lausanne, Switzerland<br />
     </span>
 </li>
 </ol>
-<p><a href="" class="footer">Updated: November 04, 2020</a></p>
+<p><a href="" class="footer">Updated: November 13, 2020</a></p>
 </div>
 </body>
 </html>
