--- a/index.html
+++ b/index.html
@@ -80,6 +80,16 @@ Lausanne, Switzerland<br />
 </li>
 
 <li class="pub">
+    <b>Contextual Concurrency Control.</b><br/>
+    Sujin Park, Irina Calciu, Taesoo Kim, and Sanidhya Kashyap,<br/>
+    In <i>Proceedings of the 18th Workshop on Hot Topics in Operating Systems (HotOS XVIII)</i><br/>
+    <span class='meta'>
+    
+    
+    </span>
+</li>
+
+<li class="pub">
     <b>Rethinking Software Runtimes for Disaggregated Memory.</b><br/>
     Irina Calciu, M. Talha Imran, Ivan Puddu, Sanidhya Kashyap, Hasan Al Maruf, Onur Mutlu, Aasheesh Kolli,<br/>
     In <i>Proceedings of the 26th ACM Conference on Architectural Support for Programming Languages and Operating Systems (ASPLOS 2021)</i><br/>
@@ -363,7 +373,7 @@ Lausanne, Switzerland<br />
     </span>
 </li>
 </ol>
-<p><a href="" class="footer">Updated: March 13, 2021</a></p>
+<p><a href="" class="footer">Updated: April 12, 2021</a></p>
 </div>
 </body>
 </html>
