--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <title>Sanidhya Kashyap</title>
   <style>
-      code{white-space: pre-wrap;}
-      span.smallcaps{font-variant: small-caps;}
-      span.underline{text-decoration: underline;}
-      div.column{display: inline-block; vertical-align: top; width: 50%;}
+    code{white-space: pre-wrap;}
+    span.smallcaps{font-variant: small-caps;}
+    span.underline{text-decoration: underline;}
+    div.column{display: inline-block; vertical-align: top; width: 50%;}
+    div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
+    ul.task-list{list-style: none;}
   </style>
   <link rel="stylesheet" href="files/style.css" />
   <!--[if lt IE 9]>
@@ -21,7 +23,7 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-  
+
       gtag('config', 'UA-113129009-1');
   </script>
 </head>
@@ -43,6 +45,7 @@ Lausanne, Switzerland<br />
 </p>
 <ul>
 <li><a href="cv.pdf">CV</a></li>
+<li><a href="https://rs3lab.github.io/">RS3Lab</a></li>
 <li>sanidhya.kashyap@epfl.ch</li>
 </ul>
 </blockquote>
@@ -373,7 +376,7 @@ Lausanne, Switzerland<br />
     </span>
 </li>
 </ol>
-<p><a href="" class="footer">Updated: April 12, 2021</a></p>
+<p><a href="" class="footer">Updated: June 19, 2021</a></p>
 </div>
 </body>
 </html>
