--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Lausanne, Switzerland<br />
 <blockquote>
 <p>Operating Systems, Concurrency, Distributed Systems, Computer Architecture</p>
 </blockquote>
-<h1 id="for-perspective-folks">For perspective folks</h1>
+<h1 id="for-prospective-folks">For prospective folks</h1>
 <div class="notify">
 <blockquote>
 <p><strong>I have a position for a postdoc in the area of concurrency and systems.</strong><br />
