--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ email if you are interested. </strong><br />
 <li class="pub">
     <b>Using Local Cache Coherence for Disaggregated Memory Systems.</b><br/>
     Irina Calciu, M. Talha Imran, Ivan Puddu, Sanidhya Kashyap, Hasan Al Maruf, Onur Mutlu, Aasheesh Kolli,<br/>
-     <i>CM SIGOPS Operating Systems Review (OSR 2023)</i><br/>
+     <i>ACM SIGOPS Operating Systems Review (OSR 2023)</i><br/>
     <span class='meta'>
     
     
