--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ email if you are interested. </strong><br />
 <h1 id="pub">Publications</h1>
 <ol>
 <li class="pub">
-    <b>Transparent Scaling of Single-Threaded Software Network Functions.</b><br/>
+    <b>Transparent Multicore Scaling of Single-Threaded Network Functions.</b><br/>
     Lei Yan, Yueyang Pan, Diyu Zhou, George Candea, and Sanidhya Kashyap,<br/>
     In <i>Proceedings of the 19th ACM European Conference on Computer Systems (EuroSys 2024)</i><br/>
     <span class='meta'>
