--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ me an email if you are interested. </strong><br />
 </li>
 
 <li class="pub">
-    <b>FlexGuard: Subscription-Agnostic Mutual Exclusion.</b><br/>
+    <b>FlexGuard: Fast Mutual Exclusion Independent of Subscription.</b><br/>
     Victor Laforet, Sanidhya Kashyap, Călin Iorgulescu, Julia Lawall, Jean-Pierre Lozi<br/>
     In <i>Proceedings of the 30th ACM Symposium on Operating Systems Principles (SOSP 2025)</i><br/>
     <span class='meta'>
