--- a/index.html
+++ b/index.html
@@ -72,6 +72,16 @@ me an email if you are interested. </strong><br />
 <h1 id="pub">Publications</h1>
 <ol>
 <li class="pub">
+    <b>Towards Structurally Extensible Host Network Stacks.</b><br/>
+    Kumar Kartikeya Dwivedi, Rishabh Iyer, and Sanidhya Kashyap<br/>
+    In <i>Proceedings of the 24th ACM Workshop on Hot Topics in Networks (HotNets 2025)</i><br/>
+    <span class='meta'>
+    
+    
+    </span>
+</li>
+
+<li class="pub">
     <b>eBPF Misbehavior Detection: Fuzzing with a Specification-Based Oracle.</b><br/>
     Tao Lyu, Kumar Kartikeya Dwivedi, Thomas Bourgeat, Mathias Payer, Meng Xu, and Sanidhya Kashyap<br/>
     In <i>Proceedings of the 30th ACM Symposium on Operating Systems Principles (SOSP 2025)</i><br/>
@@ -633,7 +643,7 @@ Linux</a></span>
     </span>
 </li>
 </ol>
-<p><a href="" class="footer">Updated: September 17, 2025</a></p>
+<p><a href="" class="footer">Updated: October 04, 2025</a></p>
 </div>
 </body>
 </html>
